--- a/Style.css
+++ b/Style.css
@@ -1,114 +1,299 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Poppins:wght@100;400;500;600;700;800;900&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Montserrat',sans-serif;
+    
 }
-
-:root{
-    --primary-color: #fff;
-    --primary-shade: #f7f5f2;
-    --secondary-color: #547ae4;
-    --secondary-shade: #2c7070;
-    --red-color: #d40700;
-    --red-shade: #b20600;
-    --accent-color: #ffee63;
-
+body{
+    font-family: "Poppins",sans-serif;
+    color: rgb(245, 240, 240);
+    background-color: rgb(38, 38, 155);
 }
-ul li{
-    list-style: none;
+.header{
+    background-color: rgb(38, 38, 85);
+    position: sticky;
+    display: flex;
+    justify-content: space-between;
+    padding: 25px 10%;
+    box-shadow: 0px 0px 14px rgb(110, 101, 101);
+    z-index: 1;
+    
 }
-a{
-    text-decoration: none;
-
-}
-/*header section*/
-header{
-    background: rgb(20, 20, 20);
-    background: linear-gradient(90deg, rgb(23, 22, 24) 0%, rgba(50.50.51.1) 35%, rgb(13, 14, 14) 100%);
-    background: linear-gradient(to right, #0e0e14, #0a0b0c,#0d0d0e);
-    color: var(--primary-color);
-}
-.nav-bar{
-    padding: 30px 0;
-}
-span{
-    color: var(--red-color);
-}
-ul li a{
-    margin: 0 10px;
-    padding: 0 5px;
-    color: var(--accent-color);
-    font-size: 18px;
-    cursor: pointer;
-}
-ul li a::before{
-    content: '';
-    width: 0;
-    position: absolute;
-    bottom: -5px;
+.sticky{
+    position: fixed;
+    top: 0;
     left: 0;
-    height: 2px;
-    background-color: var(--primary-color);
-    transition: 0.6s ease;
-
-}
-ul li a:hover::before{
     width: 100%;
-
+    padding-bottom: 1rem;
 }
-/* button */
-.btn{
-    width: 100px;
-    height: 40px;
-    border-radius: 8px;
-    background-color: var(--red-color);
-    color: var(--primary-color);
-    outline: none;
+
+.logo{
+    color: #ee2020;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 27px;
+    cursor: default;
+    animation:slideLeft 1s ease-in-out;
+}
+.navbar a{
+    text-decoration: none;   
+    color: #f1efef;
+    display: inline-block;
+    padding: 0px 16px;
+    font-weight: 600;
+    transition: 0.3s all; 
+    animation:navMenu 1s forwards;
+    animation-delay: calc(0.1s *var(--i)); 
+    opacity: 100;
+}
+.navbar a:hover ,
+.navbar .active{
+    color: rgb(136, 67, 211);
+}
+.my-container{
+    margin-top: 3.5rem;
+    background-color: rgb(66, 66, 202);
+    display: flex;
+    padding: 25px 10%;
+    justify-content: center;
+    align-items: center;
+}
+
+.info-side h3{
+    font-size: 1.8rem;
+    font-weight: 700;
+    margin: 10px 0;
+    letter-spacing: 1px;
+    transition: 0.3s all;
+    animation: headingUp 1s forwards ;
+}
+.info-side h1{
+    font-size: 4.2rem;
+    letter-spacing: 1px;
+    font-weight: 700;
+}
+.info-side h3 span{
+    color: blueviolet;
+}
+p{
+    line-height: 27px;
+    margin: 20px 0px 40px 0px;
+    transition: 0.3s all;
+    animation:paraRight 1s forwards;
+}
+
+.my-img img{
+    width: 20rem;
+    border-radius: 50%;
+}
+i{
+    position: relative;
+    border: 2px solid blueviolet;
+    padding: 10px;
+    border-radius: 50%;
+    color: blueviolet;
+    margin: 0rem 0.5rem;
+    transition: 0.3ms;
+    animation: navMenu 1s forwards ;
+    animation-delay: calc(var(--i)* 10ms);
+}
+i:hover{
+    box-shadow: 0px 0px 20px blueviolet;
+}
+button{
+    background-color: #0ef;
+    margin-top: 50px;
+    padding: 20px 70px;
     border: none;
+    border-radius: 30px;
     cursor: pointer;
-    font-size: 16px;
-    padding: 0 5px;
-    font-weight: 500;
+    font-weight: 600;
+    transition: 0.3s;
+    box-shadow: 0px 0px 1.9rem rgb(237, 233, 240);
+    animation: btnAnimation 1s forwards;
+}
+button:hover{
+    box-shadow: none;
 }
 
-.btn:hover{
-    background-color: var(--red-shade);
-    color: var(--primary-shade);
-    border: 2px solid var(--red-color);
-
+@keyframes slideLeft {
+    0% {
+        transform: translateX(100px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+@keyframes navMenu {
+    0% {
+        transform: translateX(-100px);
+        opacity: 0;
+    } 
+     100%{
+        transform: translateX(0px);
+        opacity: 1;
+    }
 }
 
-
-
-
-
-.content{
-    height: 90vh;
-    position: relative;
+@keyframes headingUp {
+    0% {
+        transform: translateY(100px);
+        opacity: 0;
+    } 
+     100%{
+        transform: translateY(0px);
+        opacity: 1;
+    }
 }
-.right img{
-    width: 300px;
-    height: 350px;
-    position: relative;
-    z-index: 999;
+@keyframes paraRight {
+    0% {
+        transform: translateX(100px);
+        opacity: 0;
+    } 
+     100%{
+        transform: translateX(0px);
+        opacity: 1;
+    }
+}
+
+@keyframes btnAnimation {
+    0%{
+        scale: 0;
+    }
+    100%{
+        scale: 1;
+    }
+}
+@keyframes aboutUp {
+    0% {
+        transform: translateY(100px);
+        opacity: 0;
+    } 
+     100%{
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+.aboutme-container, .skills-container, .contact-container{
+    background-color: rgb(4, 4, 36);
+    padding-top: 4rem;
+
+}
+.aboutme-container > h2,.skills-container > h2, .contact-container> h2{
+    text-align: center;
+    font-size: 2rem;
+    padding-bottom: 3rem;
+}
+.about-me, .skills, contact{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.about-me > p, .skills > p{
+    width: 50vw;
+}
+.about-img-container, .skills-img-container{
+    height: 26%;
+    width: 47%;
+    display: flex;
+    justify-content: center;
+}
+.about-img-container > img {
+width: 50%;
+border-radius: 1rem;
+}
+.progress-section {
+    width: 100%;
+    max-width: 600px;
+    border-radius: 15px;
+    background: rgb(4, 4, 36);
+    padding: 1rem 2rem;
+    margin: 0 auto;
+
+    .task-progress {
+      margin: 1.5rem 0;
+    }
+  
+    .task-progress p {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      color: whitesmoke;
+      width: 100%;
+    }
+  
+    span {
+      color: #eee;
+    }
+  
+    .progress {
+        border-radius: 10px;
+        height: 10px;
+        width: 32rem;
+    }
+  }
+
+.contact{
+    display: flex;
+    justify-content: center;
+}
+.contact-form{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.contact-form > input{
+    padding: 0.8rem;
+    width: 30rem;
+    border-radius: 1rem;
+    background: black;
+    margin-bottom: 0.2rem;
+    color: white;
+    font-family: "Poppins",sans-serif;
+}
+.contact-container{
+    margin-bottom: 2rem;
+}
+.contact-form > textarea{
+    padding: 0.8rem;
+    border-radius: 1rem;
+    background: black ;
+    width: 30rem;
+    height: 10rem;
+    color: white;
+    font-family: "Poppins",sans-serif;
+}
+#submit-btn{
+    background-color: rgb(48, 22, 196);
+    color: white;
+    margin-top: 1rem;
+    width: 5rem;
+    margin: auto;
+    box-shadow: 0px 0px 5px #0ef;
+}
+#submit-btn:hover{
     cursor: pointer;
-    transition: 0.3s ease;
+    color: blueviolet;
+    background-color: white;
+    transition: 0.3s all ease-in-out;
 }
-.right img:hover{
-    filter:drop-shadow(16px 5px 20px burlywood);
+::placeholder{
+    color: white;
 }
-h4, p{
-    font-family: 'poppins', sans-serif;
+.contact-form > input:focus, .contact-form > textarea:focus{
+    color: blueviolet;
+    background-color: white;
+    
+}
+.cpy{
+    color: beige;
+    text-align: right;
 }
 
-.color-box{
-    width: 560px;
-    height: 480px;
-    border: 5px solid red;
-    transform: rotate(48deg);
-    position: absolute;
-    top: 120px;
-    right: 10px;
-}
+
+   
+  
